# Discregrid

./: .gitignore  CMakeLists.txt
cmake/: DiscregridConfig.cmake.in
cmd/discrete_field_to_bitmap/: CMakeLists.txt
cmd/generate_density_map/: CMakeLists.txt
cmd/generate_sdf/: CMakeLists.txt
discregrid/: CMakeLists.txt
include/Discregrid/acceleration/: bounding_sphere.hpp  bounding_sphere_hierarchy.hpp  kd_tree.hpp  kd_tree.inl
src/acceleration/: bounding_sphere_hierarchy.cpp
src/geometry/: mesh_distance.cpp
src/mesh/: entity_iterators.cpp
